# satutils

./: CMakeLists.txt  README.md  build.sh  satutils-config.cmake.in
examples/: test_parser.cpp
include/satutils/: atmosphere.hpp  binary_ops.hpp  clock.hpp  code-gen.hpp  code_gen.hpp  common.hpp  constants.hpp  ephemeris.hpp  gps_ephemeris.hpp  parsers.hpp
src/: binary_ops.cpp  code_gen.cpp  constants.cpp
